finalized organization hierarchy

--- a/pages-product-details/anglewrap.html
+++ b/pages-product-details/anglewrap.html
@@ -15,7 +15,7 @@
 		<script src="https://kit.fontawesome.com/065b6a01b6.js" crossorigin="anonymous"></script>
 
 		<!-- external stylesheet -->
-		<link rel="stylesheet" href="/css/styles-product-details-page.css" />
+		<link rel="stylesheet" href="/css/styles-product-details-template.css" />
 
 		<!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -54,7 +54,7 @@
 				<!-- breadcrumb -->
 				  <nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
-					  <li class="breadcrumb-item"><a href="/industrial-solutions.html">Industrial Solutions</a></li>
+					  <li class="breadcrumb-item"><a href="/industries.html">Industrial Solutions</a></li>
 					  <li class="breadcrumb-item"><a href="/pages-solutions/lumber-and-panelboard.html">Lumber and Panelboard</a></li>
 					  <li class="breadcrumb-item"><a href="/pages-product-categories/angleboard.html">AngleBoard</a></li>
 					  <li class="breadcrumb-item active" aria-current="page"><a><b>AngleWrap</b></a></li>
@@ -140,7 +140,7 @@
 			<div>
 				<h2 class="heading">Solution group</h2>
 				<hr>
-				<img src="/images/solutions-group.png" class="img-fluid" alt="">
+				<img src="/images/pages-product-details/solutions-group.png" class="img-fluid" alt="">
 			</div>
 			<br><br><br><br>
 
@@ -183,16 +183,16 @@
 			<div>
 				<h2 class="heading">Related products</h2>
 				<hr>
-				<!-- Industries gallery -->
+				<!-- related products gallery -->
 
-				<div id="industry-gallery">
+				<div id="products-gallery">
 					<div class="row">
 
 					<!-- Gallery item -->
 					<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-						<div class="bg-white rounded shadow-sm"><img src="/images/home-page/industries/lumber-and-panelboard.png" alt="" class="img-fluid card-img-top">
+						<div class="bg-white rounded shadow-sm related-product"><img src="/images/pages-product-details/placeholder.jpg" alt="" class="img-fluid card-img-top">
 						<div class="p-4">
-							<h5> <a href="#" class="gallery-title">Magnus</a></h5>
+							<h5> <a href="/pages-product-categories/" class="gallery-title">Magnus</a></h5>
 							<p class="gallery-description">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
 						</div>
 						</div>
@@ -200,9 +200,9 @@
 					
 					<!-- Gallery item -->
 					<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-						<div class="bg-white rounded shadow-sm"><img src="/images/home-page/industries/corrugated.png" alt="" class="img-fluid card-img-top">
+						<div class="bg-white rounded shadow-sm related-product"><img src="/images/pages-product-details/placeholder.jpg" alt="" class="img-fluid card-img-top">
 							<div class="p-4">
-								<h5> <a href="#" class="gallery-title">Pallet frame</a></h5>
+								<h5> <a href="/pages-product-categories/" class="gallery-title">Pallet frame</a></h5>
 								<p class="gallery-description">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
 							</div>
 						</div>
@@ -211,9 +211,9 @@
 						
 						<!-- Gallery item -->
 						<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-							<div class="bg-white rounded shadow-sm"><img src="/images/home-page/industries/production-and-logistics.png" alt="" class="img-fluid card-img-top">
+							<div class="bg-white rounded shadow-sm related-product"><img src="/images/pages-product-details/placeholder.jpg" alt="" class="img-fluid card-img-top">
 								<div class="p-4">
-									<h5> <a href="#" class="gallery-title">Polyster strapping</a></h5>
+									<h5> <a href="/pages-product-categories/" class="gallery-title">Polyster strapping</a></h5>
 									<p class="gallery-description">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
 								</div>
 							</div>
@@ -222,9 +222,9 @@
 
 						<!-- Gallery item -->
 					<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-						<div class="bg-white rounded shadow-sm"><img src="/images/home-page/industries/paper-and-graphic-arts.png" alt="" class="img-fluid card-img-top">
+						<div class="bg-white rounded shadow-sm related-product"><img src="/images/pages-product-details/placeholder.jpg" alt="" class="img-fluid card-img-top">
 							<div class="p-4">
-								<h5> <a href="#" class="gallery-title">Angleboard</a></h5>
+								<h5> <a href="/pages-product-categories/" class="gallery-title">Angleboard</a></h5>
 								<p class="gallery-description">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
 							</div>
 						</div>
