--- a/pages-solutions/plastic-strapping-systems.html
+++ b/pages-solutions/plastic-strapping-systems.html
@@ -55,18 +55,19 @@
 				  <nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
 					  <li class="breadcrumb-item"><a href="/industries.html">Industrial Solutions</a></li>
-					  <li class="breadcrumb-item active" aria-current="page"><a><b>Lumber & Panelboard</b></a></li>
+					  <li class="breadcrumb-item active" aria-current="page"><a><b>Plastic Strapping Systems</b></a></li>
 					</ol>
 				  </nav>
 
-				<h2 class="fw-normal lh-1 main-heading">Lumber & Panelboard</h2>
+				<h2 class="fw-normal lh-1 main-heading">Plastic Strapping Systems</h2>
 			</div>
 
 			<!-- divider -->
 			<div class="divider-dash"></div> 
 
 			<!-- description -->
-			<p class="description">With a portfolio of protective products that minimize moisture and corrosion damage, dunnage products that ease storage and handling, and strapping solutions that secure heavy loads for transit, Signode has a full line of packaging products and equipment designed specifically for all types of mills and metal service center industry applications.
+			<p class="description">
+				Signode Packaging Systems is the leading worldwide provider of plastic strapping systems (nonmetallic strapping systems) for the securement of a wide range of products, from newspapers and produce to PVC pipe and cotton bales. Two plastic strapping materials — Contrax® polypropylene and Tenax® polyester — are the basic components of our plastic strapping systems. We also offer an extensive line of application equipment, ranging from simple hand tools to fully automated, operatorless machines. Our sales, equipment service, customer service and engineering departments can help you design the optimum protective packaging system for your application.
 			</p>
 			
 		</div> <br><br>
