--- a/pages-company/brands.html
+++ b/pages-company/brands.html
@@ -121,7 +121,7 @@
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="http://www.formambalaj.com.tr/en/products/packaging-solutions" target="_blank"><img src="/images/brands-page/form.png" alt="form-logo" class="img-fluid card-img-top" /></a>
+						<a href="http://www.formambalaj.com.tr/en/products/products" target="_blank"><img src="/images/brands-page/form.png" alt="form-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
@@ -311,6 +311,5 @@
 
 		<!-- Bootstrap JavaScript -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-
 	</body>
 </html>
