--- a/pages-product-categories/angleboard.html
+++ b/pages-product-categories/angleboard.html
@@ -31,6 +31,9 @@
 				$("#navbar-two").load("/partials/navbar-two.html");
 				$("#footer").load("/partials/footer.html");
 			});
+
+			alert(document.referrer.referrer);
+
 		</script>
 	</head>
 
