--- a/pages-product-details/z-20-modular.html
+++ b/pages-product-details/z-20-modular.html
@@ -28,9 +28,6 @@
                 $('#navbar-two').load('/partials/navbar-two.html');
                 $('#footer').load('/partials/footer.html');
             });
-			
-			
-
         </script>
     </head>
 
@@ -60,7 +57,7 @@
 					  <li class="breadcrumb-item"><a href="/industries.html">Industrial Solutions</a></li>
 					  <li class="breadcrumb-item"><a href="/pages-solutions/lumber-and-panelboard.html">Lumber and Panelboard</a></li>
 					  <li class="breadcrumb-item"><a href="/pages-product-categories/angleboard.html">AngleBoard</a></li>
-					  <li class="breadcrumb-item active" aria-current="page"><a><b>AngleWrap</b></a></li>
+					  <li class="breadcrumb-item active" aria-current="page"><a><b>Z-20 modular strapping system for lumber and panel strapping machines</b></a></li>
 					</ol>
 				  </nav>
 
