--- a/pages-solutions/construction.html
+++ b/pages-solutions/construction.html
@@ -20,7 +20,7 @@
 		<!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
-        <title>Lumber</title>
+        <title>Signode Canada</title>
 
         <script>
             $(function(){
@@ -28,8 +28,6 @@
                 $('#navbar-two').load('/partials/navbar-two.html');
                 $('#footer').load('/partials/footer.html');
             });
-
-			alert(document.referrer);
         </script>
     </head>
 
@@ -57,11 +55,11 @@
 				  <nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
 					  <li class="breadcrumb-item"><a href="/industries.html">Industrial Solutions</a></li>
-					  <li class="breadcrumb-item active" aria-current="page"><a><b>Lumber & Panelboard</b></a></li>
+					  <li class="breadcrumb-item active" aria-current="page"><a><b>Construction</b></a></li>
 					</ol>
 				  </nav>
 
-				<h2 class="fw-normal lh-1 main-heading">Lumber & Panelboard</h2>
+				<h2 class="fw-normal lh-1 main-heading">Construction</h2>
 			</div>
 
 			<!-- divider -->
@@ -153,7 +151,7 @@
 				  <div class="bg-white rounded shadow-sm solutions-button h-100">
 					  <a href="/pages-product-categories/sheet.html"><img src="/images/pages-solutions/placeholder.jpg" alt="" href="" class="img-fluid card-img-top"></a>
 					<div class="p-4">
-					  <h5> <a href="/pages-product-categories/sheet.html" class="gallery-text">Manual Tensioners and Sealers</a></h5>
+					  <h5> <a href="/pages-product-categories/sheet.html" class="gallery-text">Manual tensioners and sealers</a></h5>
 					</div>
 				  </div>
 				</div>
