--- a/pages-industries/beverage-and-containers/turntable-models/turntable-models.html
+++ b/pages-industries/beverage-and-containers/turntable-models/turntable-models.html
@@ -24,7 +24,7 @@
 			$(function () {
 				$("#navbar-one").load("/partials/navbar-one.html");
 				$("#navbar-two").load("/partials/navbar-two.html");
-				$("#page-content").load("/partial-pages-product-details/seals-for-plastic-strapping.html");
+				$("#page-content").load("/partial-pages-product-categories/angleboard.html");
 				$("#footer").load("/partials/footer.html");
 			});
 		</script>
@@ -49,15 +49,14 @@
 				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
-						<li class="breadcrumb-item"><a href="../../beverage-and-containers.html">Beverage and Containers</a></li>
-						<li class="breadcrumb-item"><a href="../seals.html">Seals</a></li>
+						<li class="breadcrumb-item"><a href="../beverage-and-containers.html">Beverage and Containers</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
-							<a><b>Seals for Plastic Strapping</b></a>
+							<a><b>Angleboard</b></a>
 						</li>
 					</ol>
 				</nav>
 
-				<h2 class="fw-normal lh-1 main-heading">Seals for Plastic Strapping</h2>
+				<h2 class="fw-normal lh-1 main-heading">Angleboard</h2>
 			</div>
 
 			<!-- divider -->
