--- a/partial-pages-product-categories/signode-strapping-machines.html
+++ b/partial-pages-product-categories/signode-strapping-machines.html
@@ -42,11 +42,11 @@
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/cutters-for-steel-or-plastic-strapping.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/BPX-lumber-and-panel-strapping-machine.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/cutters-for-steel-or-plastic-strapping.html"><h5 class="card-title">Cutters for Steel or Plastic Strapping</h5></a>
+									<a href="./products/BPX-lumber-and-panel-strapping-machine.html"><h5 class="card-title">BPX Lumber and Panel Strapping Machine</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
@@ -61,28 +61,11 @@
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/dispensers-for-plastic-strapping.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
-							</div>
-							<div class="col-6">
-								<div class="card-body">
-									<a href="./products/dispensers-for-plastic-strapping.html"><h5 class="card-title">Dispensers for Plastic Strapping</h5></a>
-									<p class="card-text">Super strong Formaboard™ edge protection is lightweight, and water/moisture resistant. Ideal for transporting refrigerated/frozen foods.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- product -->
-				<div class="col-12 col-lg-6 mb-4">
-					<div class="card mb-3 h-100">
-						<div class="row no-gutters h-100">
-							<div class="col-6">
-								<a href="./products/dispensers-for-steel-strapping.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/MOD-GPX-2000-semiautomatic-walk-up-strapping-machine.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/dispensers-for-steel-strapping.html"><h5 class="card-title">Dispensers for Steel Strapping</h5></a>
+									<a href="./products/MOD-GPX-2000-semiautomatic-walk-up-strapping-machine.html"><h5 class="card-title">MOD-GPX 2000 Semiautomatic Walk-Up Strapping Machine</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
@@ -97,11 +80,31 @@
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/filter-regulator-lubricator-for-pneumatic-tools.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/MOD-GPX-semi-or-automatic-plastic-strapping-machine.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/filter"><h5 class="card-title">Dispensers for Steel Strapping</h5></a>
+									<a href="./products/MOD-GPX-semi-or-automatic-plastic-strapping-machine.html"><h5 class="card-title">MOD-GPX Semiautomatic Or Automatic Plastic Strapping Machine</h5></a>
+									<p class="card-text">
+										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+				<!-- product -->
+				<div class="col-12 col-lg-6 mb-4">
+					<div class="card mb-3 h-100">
+						<div class="row no-gutters h-100">
+							<div class="col-6">
+								<a href="./products/SIG-C-series-automatic-corrugated-bundling-machine.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
+							</div>
+							<div class="col-6 h-100">
+								<div class="card-body">
+									<a href="./products/SIG-C-series-automatic-corrugated-bundling-machine.html"><h5 class="card-title">SIG C Series Automatic Corrugated Bundling Machine</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
@@ -116,11 +119,31 @@
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/tension-meter-for-plastic-and-steel-strapping.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/TTX-strapping-machine.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/dispensers-for-steel-strapping.html"><h5 class="card-title">Dispensers for Steel Strapping</h5></a>
+									<a href="./products/TTX-strapping-machine.html"><h5 class="card-title">TTX Strapping Machine</h5></a>
+									<p class="card-text">
+										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+				<!-- product -->
+				<div class="col-12 col-lg-6 mb-4">
+					<div class="card mb-3 h-100">
+						<div class="row no-gutters h-100">
+							<div class="col-6">
+								<a href="./products/Z-20-modular-strapping-sysytem-for-lumber-and-panel-strapping-machines.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
+							</div>
+							<div class="col-6 h-100">
+								<div class="card-body">
+									<a href="./products/Z-20-modular-strapping-sysytem-for-lumber-and-panel-strapping-machines.html"><h5 class="card-title">Z-20 Modular Strapping System For Lumber and Panel Strapping Machines</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
