--- a/partial-pages-product-categories/stretch-film-equipment.html
+++ b/partial-pages-product-categories/stretch-film-equipment.html
@@ -37,16 +37,17 @@
 
 		<div class="container" id="products-section">
 			<div class="row">
+				
 				<!-- product -->
 				<div class="col-12 col-lg-6 mb-4">
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/cutters-for-steel-or-plastic-strapping.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/cobra-1525A-rotary-arm-automatic-stretch-wrapping-machine.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/cutters-for-steel-or-plastic-strapping.html"><h5 class="card-title">Cutters for Steel or Plastic Strapping</h5></a>
+									<a href="./products/cobra-1525A-rotary-arm-automatic-stretch-wrapping-machine.html"><h5 class="card-title">Cobra 1525A Rotary Arm Automatic Stretch Wrapping Machine</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
@@ -61,28 +62,11 @@
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/dispensers-for-plastic-strapping.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
-							</div>
-							<div class="col-6">
-								<div class="card-body">
-									<a href="./products/dispensers-for-plastic-strapping.html"><h5 class="card-title">Dispensers for Plastic Strapping</h5></a>
-									<p class="card-text">Super strong Formaboard™ edge protection is lightweight, and water/moisture resistant. Ideal for transporting refrigerated/frozen foods.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- product -->
-				<div class="col-12 col-lg-6 mb-4">
-					<div class="card mb-3 h-100">
-						<div class="row no-gutters h-100">
-							<div class="col-6">
-								<a href="./products/dispensers-for-steel-strapping.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/cobra-1525CN-rotary-arm-automatic-wrapping-machine.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/dispensers-for-steel-strapping.html"><h5 class="card-title">Dispensers for Steel Strapping</h5></a>
+									<a href="./products/cobra-1525CN-rotary-arm-automatic-wrapping-machine.html"><h5 class="card-title">Cobra 1525CN Rotary Arm Automatic Wrapping Machine</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
@@ -97,11 +81,11 @@
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/filter-regulator-lubricator-for-pneumatic-tools.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/cobra-G-semi-automatic-wrapping-machine.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/filter"><h5 class="card-title">Dispensers for Steel Strapping</h5></a>
+									<a href="./products/cobra-G-semi-automatic-wrapping-machine.html"><h5 class="card-title">Cobra G Semi Automatic Wrapping Machine</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
@@ -116,11 +100,87 @@
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/tension-meter-for-plastic-and-steel-strapping.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/eliminator-stretch-film-line.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/dispensers-for-steel-strapping.html"><h5 class="card-title">Dispensers for Steel Strapping</h5></a>
+									<a href="./products/eliminator-stretch-film-line.html"><h5 class="card-title">Eliminator Stretch Film Line</h5></a>
+									<p class="card-text">
+										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- product -->
+				<div class="col-12 col-lg-6 mb-4">
+					<div class="card mb-3 h-100">
+						<div class="row no-gutters h-100">
+							<div class="col-6">
+								<a href="./products/galewrap-impact-oriented-film.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
+							</div>
+							<div class="col-6 h-100">
+								<div class="card-body">
+									<a href="./products/galewrap-impact-oriented-film.html"><h5 class="card-title">Galewrap Impact Oriented Film</h5></a>
+									<p class="card-text">
+										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- product -->
+				<div class="col-12 col-lg-6 mb-4">
+					<div class="card mb-3 h-100">
+						<div class="row no-gutters h-100">
+							<div class="col-6">
+								<a href="./products/galewrap-leverage-oriented-film.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
+							</div>
+							<div class="col-6 h-100">
+								<div class="card-body">
+									<a href="./products/galewrap-leverage-oriented-film.html"><h5 class="card-title">Galewrap Leverage Oriented Film</h5></a>
+									<p class="card-text">
+										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- product -->
+				<div class="col-12 col-lg-6 mb-4">
+					<div class="card mb-3 h-100">
+						<div class="row no-gutters h-100">
+							<div class="col-6">
+								<a href="./products/GW-1200-semi-automatic-turntable-wrapping-machine.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
+							</div>
+							<div class="col-6 h-100">
+								<div class="card-body">
+									<a href="./products/GW-1200-semi-automatic-turntable-wrapping-machine.html"><h5 class="card-title">GW-1200 Semi Automatic Turntable Wrapping Machine</h5></a>
+									<p class="card-text">
+										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- product -->
+				<div class="col-12 col-lg-6 mb-4">
+					<div class="card mb-3 h-100">
+						<div class="row no-gutters h-100">
+							<div class="col-6">
+								<a href="./products/raptor-plus-semi-automatic-turntable-wrapping-machine.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
+							</div>
+							<div class="col-6 h-100">
+								<div class="card-body">
+									<a href="./products/raptor-plus-semi-automatic-turntable-wrapping-machine.html"><h5 class="card-title">Raptor Plus Semi Automatic Turntable Wrapping Machine</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
