--- a/partial-pages-product-details/MOD-GPX-2000-semiautomatic-walk-up-strapping-machine.html
+++ b/partial-pages-product-details/MOD-GPX-2000-semiautomatic-walk-up-strapping-machine.html
@@ -38,7 +38,7 @@
 					<div class="col-md-6 order-md-3">
 
 						<!-- heading -->
-						<h2 class="product-name">Angleboard</h2>
+						<h2 class="product-name">MOD GPX 2000 Semiautomatic Walk-Up Strapping Machine</h2>
 						<hr>
 						
 						<p class="lead text-content"><b>Product description:</b> Apex and Apex Plus steel strapping are cold rolled, non-heat treated, low carbon strapping manufactured with superior edge conditioning with excellent coating and surface properties.</p>
