--- a/partial-pages-solutions/beverage-and-containers.html
+++ b/partial-pages-solutions/beverage-and-containers.html
@@ -100,16 +100,6 @@
 				</div>
 				<!-- End -->
 
-					  <!-- Gallery item -->
-			  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-				  <div class="bg-white rounded shadow-sm solutions-button h-100">
-					  <a href="./rotary-ring-models/rotary-ring-models.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" alt="" href="" class="img-fluid card-img-top"></a>
-					<div class="p-4">
-					  <h5> <a href="./rotary-ring-models/rotary-ring-models.html" class="gallery-text">Rotary Ring Models</a></h5>
-					</div>
-				  </div>
-				</div>
-
 				 <!-- Gallery item -->
 			  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 				  <div class="bg-white rounded shadow-sm solutions-button h-100">
@@ -133,9 +123,9 @@
 				<!-- Gallery item -->
 			  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 				  <div class="bg-white rounded shadow-sm solutions-button h-100">
-					  <a href="./strappex-strapping-machines/strappex-strapping-machines.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" alt="" href="" class="img-fluid card-img-top"></a>
+					  <a href="./strapex-strapping-machines/strapex-strapping-machines.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" alt="" href="" class="img-fluid card-img-top"></a>
 					<div class="p-4">
-					  <h5> <a href="./strappex-strapping-machines/strappex-strapping-machines.html" class="gallery-text">Strappex Strapping Machines</a></h5>
+					  <h5> <a href="./strapex-strapping-machines/strapex-strapping-machines.html" class="gallery-text">Strapex Strapping Machines</a></h5>
 					</div>
 				  </div>
 				</div>
@@ -181,6 +171,15 @@
 					</div>
 				  </div>
 				</div>
+
+				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+					<div class="bg-white rounded shadow-sm solutions-button h-100">
+						<a href="./turntable-models/turntable-models.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" alt="" href="" class="img-fluid card-img-top"></a>
+					  <div class="p-4">
+						<h5> <a href="./turntable-models/turntable-models.html" class="gallery-text">Turntable Models</a></h5>
+					  </div>
+					</div>
+				  </div>
 			  
 		
 		  </div>
