--- a/pages-industries/beverage-and-containers/angleboard/products/cornerboard.html
+++ b/pages-industries/beverage-and-containers/angleboard/products/cornerboard.html
@@ -24,7 +24,7 @@
 			$(function () {
 				$("#navbar-one").load("/partials/navbar-one.html");
 				$("#navbar-two").load("/partials/navbar-two.html");
-				$("#page-content").load("/partial-pages-product-details/anglewrap.html");
+				$("#page-content").load("/partial-pages-product-details/cornerboard.html");
 				$("#footer").load("/partials/footer.html");
 			});
 		</script>
@@ -52,12 +52,12 @@
 						<li class="breadcrumb-item"><a href="../../beverage-and-containers.html">Beverage and Containers</a></li>
 						<li class="breadcrumb-item"><a href="../angleboard.html">Angleboard</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
-							<a><b>AngleWrap</b></a>
+							<a><b>CornerBoard</b></a>
 						</li>
 					</ol>
 				</nav>
 
-				<h2 class="fw-normal lh-1 main-heading">AngleWrap</h2>
+				<h2 class="fw-normal lh-1 main-heading">CornerBoard</h2>
 			</div>
 
 			<!-- divider -->
