--- a/pages-industries/beverage-and-containers/signode-strapping-machines/products/MOD-GPX-semi-or-automatic-plastic-strapping-machine.html
+++ b/pages-industries/beverage-and-containers/signode-strapping-machines/products/MOD-GPX-semi-or-automatic-plastic-strapping-machine.html
@@ -24,7 +24,7 @@
 			$(function () {
 				$("#navbar-one").load("/partials/navbar-one.html");
 				$("#navbar-two").load("/partials/navbar-two.html");
-				$("#page-content").load("/partial-pages-product-categories/angleboard.html");
+				$("#page-content").load("/partial-pages-product-details/MOD-GPX-semi-or-automatic-plastic-strapping-machine.html");
 				$("#footer").load("/partials/footer.html");
 			});
 		</script>
@@ -49,14 +49,15 @@
 				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
-						<li class="breadcrumb-item"><a href="../beverage-and-containers.html">Beverage and Containers</a></li>
+						<li class="breadcrumb-item"><a href="../../beverage-and-containers.html">Beverage and Containers</a></li>
+						<li class="breadcrumb-item"><a href="../signode-strapping-machines.html">Signode Strapping Machines</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
-							<a><b>Angleboard</b></a>
+							<a><b>MOD-GPX Semiautomatic Or Automatic Plastic Strapping Machine</b></a>
 						</li>
 					</ol>
 				</nav>
 
-				<h2 class="fw-normal lh-1 main-heading">Angleboard</h2>
+				<h2 class="fw-normal lh-1 main-heading">MOD-GPX Semiautomatic Or Automatic Plastic Strapping Machine</h2>
 			</div>
 
 			<!-- divider -->
