--- a/pages-industries/beverage-and-containers/tools-battery/products/grippack-sealer-114.html
+++ b/pages-industries/beverage-and-containers/tools-battery/products/grippack-sealer-114.html
@@ -50,14 +50,14 @@
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
 						<li class="breadcrumb-item"><a href="../../beverage-and-containers.html">Beverage and Containers</a></li>
-						<li class="breadcrumb-item"><a href="../angleboard.html">Angleboard</a></li>
+						<li class="breadcrumb-item"><a href="../tools-battery.html">Tools - Battery</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
-							<a><b>AngleWrap</b></a>
+							<a><b>Grippack Sealer 14</b></a>
 						</li>
 					</ol>
 				</nav>
 
-				<h2 class="fw-normal lh-1 main-heading">AngleWrap</h2>
+				<h2 class="fw-normal lh-1 main-heading">Grippack Sealer 14</h2>
 			</div>
 
 			<!-- divider -->
