--- a/partial-pages-product-categories/tools-battery.html
+++ b/partial-pages-product-categories/tools-battery.html
@@ -42,11 +42,11 @@
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/angleboard.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/BXT3-16-handheld-battery-powered-strapping-tool.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/angleboard.html"><h5 class="card-title">Angleboard</h5></a>
+									<a href="./products/BXT3-16-handheld-battery-powered-strapping-tool.html"><h5 class="card-title">BXT3-16 Handheld Battery Powered Strapping Tool</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
@@ -61,11 +61,11 @@
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/anglewrap.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/BXT3-19-battery-powered-combination-tool-for-polyester-strapping.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6">
 								<div class="card-body">
-									<a href="./products/anglewrap.html"><h5 class="card-title">AngleWrap</h5></a>
+									<a href="./products/BXT3-19-battery-powered-combination-tool-for-polyester-strapping.html"><h5 class="card-title">BXT3-16 Battery Powered Combination Tool for Polyester Strapping</h5></a>
 									<p class="card-text">Super strong Formaboard™ edge protection is lightweight, and water/moisture resistant. Ideal for transporting refrigerated/frozen foods.</p>
 								</div>
 							</div>
@@ -78,11 +78,11 @@
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/cornerboard.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/grippack-sealer-114.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/cornerboard.html"><h5 class="card-title">CornerBoard</h5></a>
+									<a href="./products/grippack-sealer-114.html"><h5 class="card-title">Grippack Sealer 14</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
