--- a/partial-pages-product-categories/turntable-models.html
+++ b/partial-pages-product-categories/turntable-models.html
@@ -37,16 +37,17 @@
 
 		<div class="container" id="products-section">
 			<div class="row">
+				
 				<!-- product -->
 				<div class="col-12 col-lg-6 mb-4">
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/angleboard.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/GW-1200-semi-automatic-turntable-wrapping-machine.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/angleboard.html"><h5 class="card-title">Angleboard</h5></a>
+									<a href="./products/GW-1200-semi-automatic-turntable-wrapping-machine.html"><h5 class="card-title">GW-1200 Semi-Automatic Turntable Wrapping Machine</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
@@ -61,28 +62,11 @@
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/anglewrap.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
-							</div>
-							<div class="col-6">
-								<div class="card-body">
-									<a href="./products/anglewrap.html"><h5 class="card-title">AngleWrap</h5></a>
-									<p class="card-text">Super strong Formaboard™ edge protection is lightweight, and water/moisture resistant. Ideal for transporting refrigerated/frozen foods.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- product -->
-				<div class="col-12 col-lg-6 mb-4">
-					<div class="card mb-3 h-100">
-						<div class="row no-gutters h-100">
-							<div class="col-6">
-								<a href="./products/cornerboard.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/raptor-plus-semi-automatic-turntable-wrapping-machine.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/cornerboard.html"><h5 class="card-title">CornerBoard</h5></a>
+									<a href="./products/raptor-plus-semi-automatic-turntable-wrapping-machine.html"><h5 class="card-title">Raptor Plus Semi-Automatic Turntable Wrapping Machine</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
